--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,20 @@
 name: news
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
   sdk: ^3.8.1
 
 dependencies:
+  cached_network_image: ^3.4.1
+  connectivity_plus: ^6.1.5
+  dio: ^5.9.0
   flutter:
     sdk: flutter
+  hive_flutter: ^1.1.0
+  pretty_dio_logger: ^1.4.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
