--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   hive_flutter: ^1.1.0
   pretty_dio_logger: ^1.4.0
   provider: ^6.1.5
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
